# isaac4.5_turtlebot4

./: .gitignore  BASHRC.md  CLAUDE.md  CLAUDE_CODE_GOAL_UNATTENDED.md  COMMANDS.md  README.md  STATUS.md  TESTING.md
.claude/: settings.json
.claude/hooks/: guard.sh
docs/: CLAUDE_CODE_GOAL.md  COMMANDS.md  INSTALL_ENVIRONMENT_SETUP.md  README.md  TESTING.md
extensions/tb4_hmi/config/: extension.toml
extensions/tb4_hmi/docs/: README.md
extensions/tb4_hmi/tb4_hmi/: __init__.py  extension.py  ros_node.py
maps/: A-1_map.pgm  A-1_map.yaml  A-1_phase3_map.pgm  A-1_phase3_map.yaml
ros2_ws/src/depthai_ros_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/depthai_ros_msgs/msg/: SpatialDetection.msg  SpatialDetectionArray.msg
scenes/: A-1_ground.usd
scripts/: cmd_vel_watchdog.py  convert_urdf_to_usd.py  dock_controller.py  generate_map_usd.py  oakd_spatial_detection.py  run_generate_map.sh  spawn_turtlebot4.py
usd/: turtlebot4.urdf  turtlebot4.usd  turtlebot4.usd.bak  turtlebot4_raw.urdf
usd/configuration/: turtlebot4_physics.usd  turtlebot4_sensor.usd
verify/: check_map.sh  check_spatial_detection.py  check_topics.sh  save_oakd_frames.py  scripted_teleop.py
verify/artifacts/: oakd_camera_info.txt  oakd_depth.npy  oakd_spatial_detection.txt  oakd_spatial_detection.yaml
